# INEipc

./: .gitignore  .pypirc  IPC CA RD Y MEX.xlsx  IPC_EEUU  IPC_EEUU.py  IPC_MX.py  Untitled-1.ipynb  api_info.txt  api_oil_price.txt  cambio_quetzal.py  config.ini  datetimeLAAR.py  datosipc.py  descriptor.py  descriptoripc.py  empaquetar_e_instalar.txt  funcionesjo.py  ipc_mex.py  ipc_usa.py  junta_directiva.py  orquestador_r.py  petroleo.py  prueba.ipynb  pyproject.toml  reducir-df_Fnt.ipynb  reporteine.py  requeriments.txt  requirements.txt  set_env_vars.bat  setup.cfg  setup.py  sql_ine.py  sql_query.py  sqline.py  tasa-interes.ipynb  tasa_interes.py  xlsx_chef.py  xlsxchef.py
INE_IPC_package/: setup.py
INE_IPC_package/INE_IPC/: __init__.py
INE_IPC_package/datosIPC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
INEipc/: datosipc.py  descriptoripc.py  extractor_boletas.py  sqlipc.py
INEipc/db_pack/: df_DivInd.parquet  df_DivNom.parquet  df_DivPon.parquet  (+4 more)
db_b/: df_DivInd.feather  df_DivInd.parquet  df_DivNom.feather  df_DivNom.parquet  df_DivPon.feather  df_DivPon.parquet  df_GbaInd.feather  df_GbaInd.parquet  df_GbaInfo.feather  df_GbaInfo.parquet  df_GbaPon.feather  df_GbaPon.parquet  marca_temporal.txt
ineipc/: __init__.py  datosipc.py  descriptoripc.py  sqline.py
ineipc_/: sqlipc.py
src/: BASE DE DATOS PERIODOS DE ESPERA POR DECADA.xlsx  IPC CA RD Y MEX.xlsx  Untitled-1.ipynb  datosipc.py  descriptoripc.py  fuentes.ipynb  funcionesjo.py  incidencias_gba.ipynb  prueba.ipynb  query_fuentes.txt  setup.py  sqline.py  sqline2.py
(+9 files in other folders)
